@@ -24,6 +24,7 @@ export(segmentationObject)
 export(signalPreProcess)
 export(symmetrizeFracB)
 export(variableSelection)
+import(HDPenReg)
 import(R.utils)
 import(cghseg)
 import(changepoint)
