@@ -1,3 +1,5 @@
+- Add HDPenReg in Imports field
+
 Version 1.1.0 (23-07-2014)
 - Vignette update
 - Minor bugs correction 
